--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
 </head>
 <body>
     <header></header>
-    <main></main>
+    <main>
+        <div class="50">
+            <img class="responsive-img" src="images/hest.webp" alt="Hest">
+        </div>
+        <div class="50">
+            <h1>Frieser hest</h1>
+            <p>Frieser (også Friser og Friserhest) er en hesterace der tilhører de barokke heste ligesom Andalusier og Lipizzaner. Den egner sig til både kørsel, ridning, dressur og show.</p>
+        </div>
+    </main>
     <footer></footer>
 </body>
 </html>
