--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="content">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
-    <link rel="stylesheet" type="text/css" href="">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
     <script src=""></script>
 </head>
 <body>
