--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="description" content="NF Bio er landets største biografkæde | 6 mio. filmglade gæster hvert år | Moderne teknologi | Se de nyeste film hos os og få en oplevelse i verdensklasse">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nordisk Film - Forside</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="stylesheet" type="text/css" href="css/nav.css">
     <link rel="stylesheet" type="text/css" href="css/featured_movies.css">
@@ -80,25 +81,36 @@
         </div>
         <div class="field_item">
             <form id="movies-list-select">
-                <div class="form-filters-wrapper">
+                <div class="form-filter-wrapper">
                     <h2>Planlæg dit biografbesøg i Odense</h2>
                     <div class="form-item">
-                        <input type="date" id="choose_date" name="date" onchange="Filter(this.valueAsDate)">
+                        <input type="date" id="edit_date" name="date" >
                     </div>
                     <div class="form-item">
                         <div class="select-wrapper">
-                            <select id="choose_title" name="title">
-                                <option value="" selected>Vælg film</option>
+                            <select id="edit_title" class="table-filter" name="title">
+                                <option value="all" selected>Vælg film</option>
                             </select>
                         </div>
                     </div>
                     <div class="form-item">
                         <div class="select-wrapper">
-                            <select id="choose_version" name="version">
-                                <option value="" selected>Vælg version</option>
+                            <select id="edit_version" class="table-filter" name="version">
+                                <option value="all" selected>Vælg version</option>
                             </select>
                         </div>
                     </div>
+                    <fieldset class="form-item form-item-format-wrapper">
+                        <div class="form-item-format">
+                            <input type="radio" id="edit_format1" name="format" checked="checked">
+                            <span class="radiobtn"></span>
+                            <label for="edit_format1" class="label">Alle</label>
+                        </div>
+                        <div class="form-item-format">
+                            <input type="radio" id="edit_format2" name="format">
+                            <span class="radiobtn"></span>
+                        </div>
+                    </fieldset>
                 </div>
                 
 
@@ -106,11 +118,30 @@
                     <option value="" selected>Vælg film</option>
                 </select> -->
             </form>
+            <div class="item-list">
+                <ul id="movie-list">
+                    <!-- <li>
+                        <article class="content-wrapper">
+                            <a href="" class="movie-preview-link">
+                                <div class="field-image">
+                                    <img src="images/movies/morkeland.jpeg" alt="Mørkeland poster">
+                                </div>
+                                <h2>Mørkeland</h2>
+                                <button class="btn-icon field-btn">
+                                    Køb <img class="icon" src="images/icons/ticket-btn.svg" alt="Find billetter"/>
+                                </button>    
+                            </a>
+                        </article>    
+                    </li> -->
+                </ul>
+            </div>
         </div>
         <div class="field_item">Kommende film</div>
         <div class="field_item">
             <div class="faq-accordion">
-                <div class="faq-header">Faq overskrift</div>
+                <div class="faq-header">
+                    <h2>Ofte stillede spørgsmål</h2>
+                </div>
                 <div class="faq-content">
                     <div>Content / Fold down</div>
                 </div>
