added css and js files

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <link rel="stylesheet" type="text/css" href="css/featured_movies.css">
     <link rel="stylesheet" type="text/css" href="css/filter-nikka.css">
     <link rel="stylesheet" type="text/css" href="css/faq.css">
+    <link rel="stylesheet" type="text/css" href="css/accordion-sabrin.css">
+    <link rel="stylesheet" type="text/css" href="css/slider-heidi.css">
     <script src="scripts/filter-nikka.js" defer></script>
+    <script src="scripts/accordion-sabrin.js" defer></script>
+    <script src="scripts/slider-heidi.js" defer></script>
 </head>
 <body>
     <header>
