--- a/index.html
+++ b/index.html
@@ -81,7 +81,37 @@
             </div>
         </div>
         <div class="field_item">
-            Video eller slide
+
+                 <!-- Slideshow container -->
+<div class="slideshow-container">
+
+    <!-- Full-width images with number and caption text -->
+    <div class="mySlides fade">
+      <img src="images/slider/deadpool&wolverine-lodret.jpg" style="width:100%">
+    </div>
+  
+    <div class="mySlides fade">
+      <img src="images/slider/Grusomme-mig-4-lodret.jpeg" style="width:100%">
+    </div>
+  
+    <div class="mySlides fade">
+      <img src="images/slider/Inderst-Inde-2-lodret.jpeg" style="width:100%">
+    </div>
+
+    <div class="mySlides fade">
+        <img src="images/slider/morkeland-lodret.jpeg" style="width:100%">
+      </div>
+  
+      <!-- The dots/circles -->
+  <div class="dots">
+    <span class="dot" onclick="currentSlide(1)"></span>
+    <span class="dot" onclick="currentSlide(2)"></span>
+    <span class="dot" onclick="currentSlide(3)"></span>
+    <span class="dot" onclick="currentSlide(4)"></span>
+  </div> 
+  </div>
+  <br>
+
         </div>
         <div class="field_item">
             <form id="movies-list-select">
