--- a/index.html
+++ b/index.html
@@ -85,21 +85,21 @@
                  <!-- Slideshow container -->
 <div class="slideshow-container">
 
-    <!-- Full-width images with number and caption text -->
+    <!-- Full-width images -->
     <div class="mySlides fade">
-      <img src="images/slider/deadpool&wolverine-lodret.jpg" style="width:100%">
+      <img src="images/slider/Deadpool-And-Wolverine-vandret.jpg" style="width:100%">
     </div>
   
     <div class="mySlides fade">
-      <img src="images/slider/Grusomme-mig-4-lodret.jpeg" style="width:100%">
+      <img src="images/slider/Grusomme-mig-4.png" style="width:100%">
     </div>
   
     <div class="mySlides fade">
-      <img src="images/slider/Inderst-Inde-2-lodret.jpeg" style="width:100%">
+      <img src="images/slider/Inderst-Inde-2.png" style="width:100%">
     </div>
 
     <div class="mySlides fade">
-        <img src="images/slider/morkeland-lodret.jpeg" style="width:100%">
+        <img src="images/slider/mOerkeland-vandret.jpg" style="width:100%">
       </div>
   
       <!-- The dots/circles -->
